# EchoFrontendV2

./: EchoFrontendV2.sln
EchoFrontendV2/: Admin.Designer.cs  Admin.cs  BackgroundFunctionCallManager.cs  EchoFrontendV2.csproj  EndpointManager.cs  Form1.Designer.cs  Form1.cs  ImportData.cs  LLMJobQueue.cs  LLMUtility.cs  LogHub.cs  LogInfo.Designer.cs  LogInfo.cs  MemoryDB.cs  MemoryManager.cs  NoiseCheck.cs  OllamaChat.cs  OllamaChatGPTIntegration.cs  OllamaEmbedder.cs  OllamaProcessManager.cs  Program.cs  SessionManager.cs  SmoothScrollRichTextBox .cs  StartupManager.cs  SystemFunctionCall.cs  Tagging.cs  TokenEstimator.cs  ToolCall.cs  ToolMetadata.cs
EchoFrontendV2/DTO/: ChatMessage.cs  ConversationMemory.cs  CoreMemory.cs  CoreMemoryBlob.cs  File.cs  Lesson.cs  Memory.cs  MemoryBlob.cs  MemoryDTO.cs  MemoryTag.cs  Session.cs  StreamRequest.cs  Tag.cs
blipshell/: config.yaml  pyproject.toml
blipshell/blipshell/: __init__.py
blipshell/blipshell/core/: agent.py  config.py  router.py
blipshell/blipshell/core/tools/: base.py  filesystem.py  memory_tools.py  shell.py  web.py
blipshell/blipshell/llm/: client.py  endpoints.py  job_queue.py  prompts.py  router.py
blipshell/blipshell/memory/: chroma_store.py  manager.py  noise.py  processor.py  search.py  sqlite_store.py  tagger.py
blipshell/blipshell/models/: config.py  memory.py  session.py  tools.py
blipshell/blipshell/session/: manager.py  models.py
blipshell/blipshell/ui/: cli.py
blipshell/blipshell/ui/web/: app.py
blipshell/scripts/: migrate_from_echo.py
